<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brayadiaz.geometria.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/GroupRadio">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cuadrado"
                android:id="@+id/cuadrado"
                android:checked="true"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lado"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/elado"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:id="@+id/cLado"
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/circulo"
                android:id="@+id/circulo"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/eRadio"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:id="@+id/cRadio"
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangulo"
                android:id="@+id/triangulo"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ladoA"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/eLadoA"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:id="@+id/cLadoA"
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ladoB"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/eLadoB"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:id="@+id/cLadoB"
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ladoC"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/eLadoC"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:id="@+id/cLadoC"
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cubo"
                android:id="@+id/cubo"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lado"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/elado"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:id="@+id/cLadoCu"
                    android:inputType="numberDecimal"/>

            </LinearLayout>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:textAllCaps="false"
            android:id="@+id/boton"
            android:onClick="Calcular"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:id="@+id/info"/>

    </LinearLayout>

</LinearLayout>
